<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        tools:context=".auth.Login">


        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="8" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="center"
            android:text="@string/SignUpHeading"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_subheading" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="6" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@android:color/black" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/user_login_style"
            android:drawableStart="@drawable/ic_baseline_mail_outline_24"
            android:drawableLeft="@drawable/ic_baseline_mail_outline_24"
            android:drawablePadding="10dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="@dimen/editTextPaddingH"
            android:paddingVertical="@dimen/editTextPaddingV" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@android:color/black" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <EditText

            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/user_login_style"
            android:drawableStart="@drawable/ic_baseline_vpn_key_24"
            android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
            android:drawablePadding="10dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/editTextPaddingH"
            android:paddingVertical="@dimen/editTextPaddingV" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textColor="@android:color/black" />


        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="4" />


        <Button
            android:id="@+id/login_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/button_login_style"
            android:paddingVertical="@dimen/editTextPaddingV"
            android:text="@string/login_now"
            android:textColor="@android:color/white" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don't have an account?" />

            <TextView
                android:id="@+id/login_createAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textColor="@android:color/black" />


        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />


    </LinearLayout>
</layout>
