<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        tools:context=".auth.SignUpActivity">


        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="8" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="center"
            android:text="@string/SignUpHeading"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signUpSubheading" />


        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="6" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@android:color/black" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/signUp_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/user_login_style"
            android:drawableStart="@drawable/ic_baseline_perm_identity_24"
            android:drawableLeft="@drawable/ic_baseline_perm_identity_24"
            android:drawablePadding="10dp"
            android:hint="UserName"
            android:inputType="textPersonName"
            android:paddingHorizontal="@dimen/editTextPaddingH"
            android:paddingVertical="@dimen/editTextPaddingV" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@android:color/black" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/signUp_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/user_login_style"
            android:drawableStart="@drawable/ic_baseline_mail_outline_24"
            android:drawableLeft="@drawable/ic_baseline_mail_outline_24"
            android:drawablePadding="10dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="@dimen/editTextPaddingH"
            android:paddingVertical="@dimen/editTextPaddingV" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@android:color/black" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/signUp_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/user_login_style"
            android:drawableStart="@drawable/ic_baseline_vpn_key_24"
            android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
            android:drawablePadding="10dp"
            android:hint="@string/hint_password"
            android:paddingHorizontal="@dimen/editTextPaddingH"
            android:paddingVertical="@dimen/editTextPaddingV" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="5" />

        <Button
            android:id="@+id/signUp_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/button_login_style"
            android:paddingVertical="@dimen/editTextPaddingV"
            android:text="@string/sign_up"
            android:textColor="@android:color/white" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already have an account?" />

            <TextView
                android:id="@+id/sign_up_to_login_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin"
                android:textColor="@android:color/black" />


        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>
</layout>