<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/item_list_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/main_activity_padding"
            android:textColor="@android:color/black"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/item_product_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/main_activity_padding"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/main_activity_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/add_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/add_item"
                    android:inputType="textPersonName" />

                <ImageView
                    android:id="@+id/upload_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/check"
                    android:padding="4dp"
                    android:src="@drawable/ic_baseline_check_24" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/add_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/quantity"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/add_prise"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/prise"
                    android:inputType="number" />
            </LinearLayout>
        </LinearLayout>

        <GridView
            android:verticalSpacing="@dimen/main_activity_padding"
            android:id="@+id/item_List_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingHorizontal="@dimen/main_activity_padding"
            android:paddingBottom="@dimen/main_activity_padding" />
    </LinearLayout>

</layout>